changes on kpi b9, added drilldown
